mem tile power graph

--- a/mflowgen/common/testbench/configure.yml
+++ b/mflowgen/common/testbench/configure.yml
@@ -2,7 +2,8 @@ name: testbench
 
 inputs:
   - run.vcd
-  - tiles_Tile_PE.list
+  - tiles_Tile_MemCore.list
+  - tiles_PE.list
 
 outputs:
   - cmd.tcl
@@ -17,5 +18,6 @@ commands:
 #-------------------------------------------------------------------------
 
 parameters:
+  design_name: undefined
   clock_period: 1.0
   PWR_AWARE: True
