more updates to work with mem and pe tiles

--- a/mflowgen/common/testbench/configure.yml
+++ b/mflowgen/common/testbench/configure.yml
@@ -3,7 +3,7 @@ name: testbench
 inputs:
   - run.vcd
   - tiles_Tile_MemCore.list
-  - tiles_PE.list
+  - tiles_Tile_PE.list
 
 outputs:
   - cmd.tcl
