add sram-pwr to post-pnr power

--- a/mflowgen/common/tile-post-pnr-power/setup/configure.yml
+++ b/mflowgen/common/tile-post-pnr-power/setup/configure.yml
@@ -13,6 +13,7 @@ outputs:
   - design.vcs.pg.v
   - testbench.sv
   - sram.v
+  - sram-pwr.v
   - sram_tt.db
   - test_vectors.txt
   - test_outputs.txt
