--- a/tests/test_app/Makefile
+++ b/tests/test_app/Makefile
@@ -91,7 +91,7 @@ compile: libcgra.so top.sv garnet_param.svh garnet_test.sv kernel.sv proc_driver
 # -------------------------------------------------------------------
 .PHONY: run
 run:
-	xrun -R -sv_lib libcgra.so $(RUN_ARGS)
+	xrun -R -sv_lib libcgra.so $(RUN_ARGS) $(APP_ARGS)
 
 # -------------------------------------------------------------------
 # Clean
