copying waves out in top level...

--- a/mflowgen/common/cadence-xcelium-sim/configure.yml
+++ b/mflowgen/common/cadence-xcelium-sim/configure.yml
@@ -14,7 +14,7 @@ inputs:
   - cmd.tcl
 
 outputs:
-  - run.vcd
+  - waves.shm
   - run.saif
 
 #-------------------------------------------------------------------------
