Use chkpt env var for ptpx gl

--- a/mflowgen/common/synopsys-ptpx-gl/configure.yml
+++ b/mflowgen/common/synopsys-ptpx-gl/configure.yml
@@ -41,3 +41,4 @@ parameters:
   strip_path: tb/dut
   PWR_AWARE: True
   batch: False
+  chkpt: False # Turn this on to save periodically during ptpx flow
