--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -14,6 +14,12 @@ steps:
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
      mflowgen run --design $$GARNET_HOME/mflowgen/glb_tile'
+  - pwd; git branch; 
+  # nov 11
+  - git checkout ee214ef77b827f969e4b5f056f5d866cf391be7a
+
+
+
 
 - wait: ~
 
@@ -22,6 +28,7 @@ steps:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 30G;
      echo "--- MAKE MENTOR-CALIBRE-LVS"; set -o pipefail;
      make mentor-calibre-lvs |& tee make-lvs.log'
+
 
 # 
 # 
