--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -13,8 +13,7 @@ steps:
 # 
 - label: 'setup'
   commands:
-  - pwd; git branch; 
-  - git checkout $$NOV11
+  - pwd; git branch; git checkout $$NOV11
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
      mflowgen run --design $$GARNET_HOME/mflowgen/glb_tile'
 
@@ -25,6 +24,7 @@ steps:
 
 - label: 'lvs'
   commands:
+  - pwd; git branch; git checkout $$NOV11
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 30G;
      echo "--- MAKE MENTOR-CALIBRE-LVS"; set -o pipefail;
      make mentor-calibre-lvs |& tee make-lvs.log'
