--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -3,24 +3,42 @@ agents: { jobsize: "hours" }
 # Note: "echo exit 13" prevents hang at genus/innovus prompt
 env:
   TEST: 'echo exit 13 | mflowgen/test/test_module.sh'
-  GOLD: /build/bdgtc.${BUILDKITE_BUILD_NUMBER}
+  GOLD: /build/bdgtc-pe.${BUILDKITE_BUILD_NUMBER}
 
 steps:
 
-##############################################################################
-# INDIVIDUAL TILE RUNS
-# 
+
 - label: 'setup'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
-     mflowgen run --design $$GARNET_HOME/mflowgen/glb_top'
+     mflowgen run --design $$GARNET_HOME/mflowgen/tile_array'
 - wait: ~
 
-- label: 'glb_tile'
+- label: 'PE'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 30G;
      set -o pipefail;
-     make glb_tile |& tee make-gtile.log'
+     make Tile_PE |& tee make-pe.log'
+
+
+
+
+# ##############################################################################
+# # INDIVIDUAL TILE RUNS
+# # 
+# - label: 'setup'
+#   commands:
+#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
+#      mflowgen run --design $$GARNET_HOME/mflowgen/glb_top'
+# - wait: ~
+# 
+# - label: 'glb_tile'
+#   commands:
+#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 30G;
+#      set -o pipefail;
+#      make glb_tile |& tee make-gtile.log'
+
+
 
 
 #   NOV11: ee214ef77b827f969e4b5f056f5d866cf391be7a
