--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -7,9 +7,8 @@ env:
 
 steps:
 
-
 ##############################################################################
-# INDIVIDUAL TILE RUNS - PE tile only
+# PE tile only
 
 - label: 'setup'
   commands:
@@ -24,99 +23,56 @@ steps:
      make Tile_PE |& tee make-pe.log'
 
 
+# Temporarily disabled
 # ##############################################################################
-# # INDIVIDUAL TILE RUNS - glb tile only
-# # GOLD: /build/bdgtc-gbtile.${BUILDKITE_BUILD_NUMBER}
-# 
-# - label: 'setup'
+# # TILE_ARRAY RUN
+# # 
+# # tile-array init step, fastest version, uses cached synthesis results, takes 5 min
+# # Also: uses about 3G
+# # What's new:
+# # 1) now testing --build_dir option, building in /sim/tmp instead of .
+# # 2) also testing step aliases e.g. "syn" for "synthesis" (synopsys OR cadence)
+# - label: 'array init 5m'
+#   agents: { jobsize: "hours" }
 #   commands:
-#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
-#      mflowgen run --design $$GARNET_HOME/mflowgen/glb_top'
-# - wait: ~
+#   - build_dir=/sim/tmp/deleteme.buildkite-$$BUILDKITE_BUILD_NUMBER.array-init
+#   - 'mflowgen/test/test_module.sh full_chip tile_array --need_space 30G
+#        --debug
+#        --use_cached constraints,MemCore,PE,rtl,tsmc16,synthesis
+#        --build_dir $$build_dir
+#        --steps init'
+#   - echo /bin/rm -rf $$build_dir
+#   - /bin/rm -rf $$build_dir
 # 
-# - label: 'glb_tile'
+# - wait: { continue_on_failure: true } # One step at a time + continue on failure
+
+
+
+
+
+
+
+
+########################################################################
+# To build a cache:
+# --build_dir /sim/buildkite-agent/gold.$$BUILDKITE_BUILD_NUMBER
+# --build_dir /sim/buildkite-agent/cache.$$BUILDKITE_BUILD_NUMBER.deleteme
+
+########################################################################
+# Left this in (below) as option/example of longer tile array run
+########################################################################
+# tile-array init step, middle version includes synthesis step, takes 22 minutes
+# - label: 'array syn+init 22m'
+#   agents: { jobsize: "hours" }
 #   commands:
-#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 30G;
-#      set -o pipefail;
-#      make glb_tile |& tee make-gtile.log'
+#   - 'mflowgen/test/test_module.sh full_chip tile_array
+#        --debug
+#        --use_cached PE,MemCore,rtl
+#        --steps syn,init'
+# - wait: { continue_on_failure: true } # One step at a time + continue on failure
+# 
 
+########################################################################
+# FULL CHIP RUNS - see pipeline_fullchip.yml
 
-
-
-#   NOV11: ee214ef77b827f969e4b5f056f5d866cf391be7a
-# - pwd; git branch; git checkout $$NOV11
-# 
-# 
-# 
-# 
-# # - label: glb_tile
-# #   commands:
-# #   - $TEST --need_space 30G glb_tile --debug
-# 
-# 
-# 
-# # - label: 'MemCore synth 17m'
-# #   commands:
-# #   - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
-# # - wait: { continue_on_failure: true } # One step at a time + continue on failure
-# # 
-# # - label: 'PE synth 23m'
-# #   commands:
-# #   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-# # - wait: { continue_on_failure: true } # One step at a time + continue on failure
-# 
-# 
-# 
-# # Temporarily disabled
-# # ##############################################################################
-# # # TILE_ARRAY RUN
-# # # 
-# # # tile-array init step, fastest version, uses cached synthesis results, takes 5 min
-# # # Also: uses about 3G
-# # # What's new:
-# # # 1) now testing --build_dir option, building in /sim/tmp instead of .
-# # # 2) also testing step aliases e.g. "syn" for "synthesis" (synopsys OR cadence)
-# # - label: 'array init 5m'
-# #   agents: { jobsize: "hours" }
-# #   commands:
-# #   - build_dir=/sim/tmp/deleteme.buildkite-$$BUILDKITE_BUILD_NUMBER.array-init
-# #   - 'mflowgen/test/test_module.sh full_chip tile_array --need_space 30G
-# #        --debug
-# #        --use_cached constraints,MemCore,PE,rtl,tsmc16,synthesis
-# #        --build_dir $$build_dir
-# #        --steps init'
-# #   - echo /bin/rm -rf $$build_dir
-# #   - /bin/rm -rf $$build_dir
-# # 
-# # - wait: { continue_on_failure: true } # One step at a time + continue on failure
-# 
-# 
-# 
-# 
-# 
-# 
-# 
-# 
-# ########################################################################
-# # To build a cache:
-# # --build_dir /sim/buildkite-agent/gold.$$BUILDKITE_BUILD_NUMBER
-# # --build_dir /sim/buildkite-agent/cache.$$BUILDKITE_BUILD_NUMBER.deleteme
-# 
-# ########################################################################
-# # Left this in (below) as option/example of longer tile array run
-# ########################################################################
-# # tile-array init step, middle version includes synthesis step, takes 22 minutes
-# # - label: 'array syn+init 22m'
-# #   agents: { jobsize: "hours" }
-# #   commands:
-# #   - 'mflowgen/test/test_module.sh full_chip tile_array
-# #        --debug
-# #        --use_cached PE,MemCore,rtl
-# #        --steps syn,init'
-# # - wait: { continue_on_failure: true } # One step at a time + continue on failure
-# # 
-# 
-# ########################################################################
-# # FULL CHIP RUNS - see pipeline_fullchip.yml
-# 
-# # For more see pipeline_notes.yml
+# For more see pipeline_notes.yml
