--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -11,105 +11,7 @@ steps:
 - label: 'setup'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
-     mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
-- wait: ~
-
-- label: 'rtl'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
-     echo "--- MAKE RTL"; set -o pipefail;
-     make rtl |& tee make-rtl.log'
-- wait: ~
-
-- label: 'tile_array'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 100G;
-     echo "--- MAKE TILE_ARRAY"; set -o pipefail;
-     make tile_array |& tee make-tile_array.log'
-- wait: ~
-
-- label: 'glb_top'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 84G;
-     echo "--- MAKE GLB_TOP"; set -o pipefail;
-     make glb_top |& tee make-glb_top.log'
-- wait: ~
-
-- label: 'GLC'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 74G;
-     echo "--- MAKE GLOBAL_CONTROLLER"; set -o pipefail;
-     make global_controller |& tee make-GLC.log'
-- wait: ~
-
-- label: 'dragon'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 74G;
-     echo "--- MAKE DRAGONPHY"; set -o pipefail;
-     make dragonphy |& tee make-dragon.log'
-- wait: ~
-
-- label: 'soc-rtl'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 73G;
-     echo "--- MAKE SOC-RTL"; set -o pipefail;
-     make soc-rtl |& tee make-soc-rtl.log'
-- wait: ~
-
-- label: 'syn'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 72G;
-     echo "--- MAKE SYNOPSYS-DC-SYNTHESIS"; set -o pipefail;
-     make cadence-genus-synthesis |& tee make-syn.log'
-- wait: ~
-
-- label: 'cts'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
-     echo "--- MAKE CADENCE-INNOVUS-CTS"; set -o pipefail;
-     make cadence-innovus-cts |& tee make-cts.log'
-- wait: ~
-
-- label: 'place'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
-     echo "--- MAKE CADENCE-INNOVUS-PLACE"; set -o pipefail;
-     make cadence-innovus-place |& tee make-place.log'
-- wait: ~
-
-- label: 'route'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
-     echo "--- MAKE CADENCE-INNOVUS-ROUTE"; set -o pipefail;
-     make cadence-innovus-route |& tee make-route.log'
-- wait: ~
-
-- label: 'postroute'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 71G;
-     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE"; set -o pipefail;
-     make cadence-innovus-postroute |& tee make-postroute.log'
-- wait: ~
-
-- label: 'hold'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD"; set -o pipefail;
-     make cadence-innovus-postroute_hold |& tee make-hold.log'
-- wait: ~
-
-- label: 'lvs'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 61G;
-     echo "--- MAKE MENTOR-CALIBRE-LVS"; set -o pipefail;
-     make mentor-calibre-lvs |& tee make-lvs.log'
-- wait: ~
-
-# Not sure if this is ever useful...
-# - label: 'drc'
-#   commands:
-#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 18G;
-#      echo "--- MAKE MENTOR-CALIBRE-DRC"; set -o pipefail;
-#      make mentor-calibre-drc |& tee make-drc.log'
-# - wait: ~
-
+     set -x;
+     which mflowgen;
+     mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
+     grep adk $$GARNET_HOME/mflowgen/full_chip/.mflowgen/*tsmc16/configure.yml'
