--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -56,11 +56,12 @@ steps:
      make soc-rtl |& tee make-soc-rtl.log'
 - wait: ~
 
+# Note: "echo exit 13" prevents hang at genus/innovus prompt, allows clean fail
 - label: 'syn'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 72G;
      echo "--- MAKE SYNOPSYS-DC-SYNTHESIS"; set -o pipefail;
-     make cadence-genus-synthesis |& tee make-syn.log'
+     echo exit 13 | make cadence-genus-synthesis |& tee make-syn.log'
 - wait: ~
 
 - label: 'cts'
