--- a/.buildkite/glb_test.yml
+++ b/.buildkite/glb_test.yml
@@ -3,7 +3,7 @@ steps:
   commands:
   - source /aha/bin/activate
   - source /cad/modules/tcl/init/sh
-  - module load base xcelium/19.03.003
+  - module load base xcelium
   - echo "--- Pruning Docker Images"
   - yes | docker image prune -a --filter "until=24h" --filter=label='description=garnet' || true
     # use the mounted garnet
