--- a/.buildkite/pipelines/pe_tile_only.yml
+++ b/.buildkite/pipelines/pe_tile_only.yml
@@ -18,6 +18,8 @@ steps:
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 30G;
      set -o pipefail;
-     make Tile_PE |& tee make-pe.log'
+     make Tile_PE |& tee make-pe.log;
+     $$GARNET_HOME/.buildkite/pipelines/check_pe_pe.sh
+     '
 
 
