forgot to include pe_pe checker

--- a/.buildkite/pipelines/pe_synth_only.yml
+++ b/.buildkite/pipelines/pe_synth_only.yml
@@ -12,7 +12,8 @@ steps:
   commands:
   - pwd
   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-  - .buildkite/pipelines/check_pe_pe.sh
+  - pwd
+  - ./.buildkite/pipelines/check_pe_pe.sh
 
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
@@ -20,3 +21,6 @@ steps:
 # FULL CHIP RUNS - see pipeline_fullchip.yml
 
 # For more see pipeline_notes.yml
+
+# /sim/buildkite-agent/builds/bigjobs-1/tapeout-aha/mflowgen/
+
