--- a/.buildkite/pipelines/pe_synth_only.yml
+++ b/.buildkite/pipelines/pe_synth_only.yml
@@ -10,12 +10,12 @@ steps:
 # 
 - label: 'PE synth 45m'
   commands:
-  - echo "+++BEGIN"
-  - echo "I am here: `pwd`"
+  - echo +++BEGIN
+  - echo I am here: `pwd`
   - ls -l ./.buildkite/pipelines/check_pe_pe.sh
-  - echo ""
+  - echo ''
   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-  - echo "I am here: `pwd`"
+  - echo I am here: `pwd`
   - ./.buildkite/pipelines/check_pe_area.sh
 
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
