pipeline syntax troubles

--- a/.buildkite/pipelines/pe_synth_only.yml
+++ b/.buildkite/pipelines/pe_synth_only.yml
@@ -1,7 +1,7 @@
 agents: { jobsize: "hours" }
 
 env:
-  TEST: 'echo exit 13 | mflowgen/test/test_module.sh'
+  TEST: 'echo exit 13 | echo mflowgen/test/test_module.sh'
 
 steps:
 
@@ -12,8 +12,9 @@ steps:
   commands:
   - 'echo +++BEGIN'
   - 'echo I am here: `pwd`'
-  - 'ls -l ./.buildkite/pipelines/check_pe_pe.sh'
+  - 'ls -l ./.buildkite/pipelines/check_pe_area.sh'
   - 'echo ""'
+  - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
   - 'echo I am here: `pwd`'
   - ./.buildkite/pipelines/check_pe_area.sh
 
