--- a/.buildkite/pipelines/pe_synth_only.yml
+++ b/.buildkite/pipelines/pe_synth_only.yml
@@ -13,7 +13,7 @@ steps:
   - 'echo +++BEGIN'
   - 'echo I am here: `pwd`'
   - 'ls -l ./.buildkite/pipelines/check_pe_area.sh'
-  - 'echo ""'
+  - echo ""
   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
   - 'echo I am here: `pwd`'
   - ./.buildkite/pipelines/check_pe_area.sh
