3 pipeline syntax troubles

--- a/.buildkite/pipelines/pe_synth_only.yml
+++ b/.buildkite/pipelines/pe_synth_only.yml
@@ -10,9 +10,9 @@ steps:
 # 
 - label: 'PE synth 45m'
   commands:
-  - echo "+++BEGIN";
-  - echo I am here: `pwd`;
-  - ls -l ./.buildkite/pipelines/check_pe_area.sh
+  - 'echo "+++BEGIN"'
+  - "echo I am here: `pwd`"
+  - "ls -l ./.buildkite/pipelines/check_pe_area.sh"
 
 
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
