check pe area - for real this time

--- a/.buildkite/pipelines/pe_synth_only.yml
+++ b/.buildkite/pipelines/pe_synth_only.yml
@@ -1,7 +1,7 @@
 agents: { jobsize: "hours" }
 
 env:
-  TEST: 'echo exit 13 | echo mflowgen/test/test_module.sh'
+  TEST: 'echo exit 13 | mflowgen/test/test_module.sh'
 
 steps:
 
