--- a/.buildkite/pipelines/pe_synth_only.yml
+++ b/.buildkite/pipelines/pe_synth_only.yml
@@ -11,7 +11,7 @@ steps:
 - label: 'PE synth 45m'
   commands:
   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-  - './.buildkite/pipelines/check_pe_area.sh'
+  - .buildkite/pipelines/check_pe_area.sh
 
 
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
