--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -1,11 +1,13 @@
 agents: { jobsize: "hours" }
 
+##############################################################################
 # Use this to test a specific branch/commit:
 # Add to env:
 #   NOV11: ee214ef77b827f969e4b5f056f5d866cf391be7a
 # Add to commands:
 # - pwd; git branch; git checkout $$NOV11
 
+##############################################################################
 # Note: "echo exit 13" prevents hang at genus/innovus prompt
 env:
   TEST: 'echo exit 13 | mflowgen/test/test_module.sh'
@@ -14,11 +16,11 @@ steps:
 
 ##############################################################################
 # INDIVIDUAL TILE RUNS
-# 
-- label: 'PE synth 23m'
+
+- label: '250MHz PE synth 12m'
   commands:
   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-  - $$GARNET_HOME/.buildkite/pipelines/check_pe_pe.sh
+  - $$GARNET_HOME/.buildkite/pipelines/check_pe_area.sh
 
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
@@ -26,8 +28,3 @@ steps:
   commands:
   - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
-
-########################################################################
-# FULL CHIP RUNS - see pipeline_fullchip.yml
-
-# For more see pipeline_notes.yml
