--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -20,7 +20,7 @@ steps:
 - label: '250MHz PE synth 12m'
   commands:
   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-  - $$GARNET_HOME/.buildkite/pipelines/check_pe_area.sh
+  - .buildkite/pipelines/check_pe_area.sh
 
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
