--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -20,10 +20,10 @@ steps:
   - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
-- label: 'PE synth 23m'
-  commands:
-  - $TEST --need_space 30G full_chip tile_array Tile_PE --steps rtl --debug
-- wait: { continue_on_failure: true } # One step at a time + continue on failure
+# - label: 'PE synth 23m'
+#   commands:
+#   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps rtl --debug
+# - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 ########################################################################
 # FULL CHIP RUNS - see pipeline_fullchip.yml
