--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -15,14 +15,15 @@ steps:
 ##############################################################################
 # INDIVIDUAL TILE RUNS
 # 
-- label: 'MemCore synth 17m'
-  commands:
-  - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
-- wait: { continue_on_failure: true } # One step at a time + continue on failure
+# - label: 'MemCore synth 17m'
+#   commands:
+#   - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
+# - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
-- label: 'PE synth 23m'
+- label: '250MHz PE synth 11m'
   commands:
-  - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
+  # - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
+  - $TEST --need_space 30G full_chip tile_array Tile_PE --steps rtl --debug
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 ########################################################################
