assume master branch?

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,10 +7,9 @@ on:
   # When requested manually
   workflow_dispatch:
 
-  # Every morning at 3am
+  # Every morning at 3am -- how does it know which branch to run??
   schedule:
-  - cron "0 3 * * *"
-    branches: master
+    - cron "0 3 * * *"
 
 
 jobs:
